Cooregidos PUT y POST en Categoria y Producto